UI fixes in the Demo

--- a/Demos/DemoNats.dproj
+++ b/Demos/DemoNats.dproj
@@ -90,7 +90,7 @@
         <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <VerInfo_Locale>1033</VerInfo_Locale>
-        <Debugger_RunParams>192.168.1.119 4222</Debugger_RunParams>
+        <Debugger_RunParams>localhost 4222</Debugger_RunParams>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
